[gd_scene load_steps=12 format=3 uid="uid://dxaie6k0g5kqw"]

[ext_resource type="Script" path="res://src/Scripts/Player.gd" id="1_ndws6"]
[ext_resource type="Texture2D" uid="uid://qpyy1aulwy55" path="res://resources/Images/icon.svg" id="2_kx870"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u2ali"]
albedo_texture = ExtResource("2_kx870")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_2uisb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jhi61"]

[sub_resource type="Animation" id="Animation_na8w3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 0.648825, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0mbgy"]
resource_name = "melee_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3cxny"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bchoe"]
_data = {
"RESET": SubResource("Animation_na8w3"),
"idle": SubResource("Animation_3cxny"),
"melee_attack": SubResource("Animation_0mbgy")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_m4eb3"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_n3j6u"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="RigidBody3D"]
lock_rotation = true
script = ExtResource("1_ndws6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_u2ali")
mesh = SubResource("QuadMesh_2uisb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_jhi61")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_bchoe")
}

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.648825, 0, -1, -2.8361e-08, 0, 0, 0, 1, 0.921318, 0, 0)
visibility_parent = NodePath(".")
mesh = SubResource("CapsuleMesh_m4eb3")

[node name="Hitbox" type="Area3D" parent="MeshInstance3D2"]
monitoring = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="MeshInstance3D2/Hitbox"]
shape = SubResource("ConvexPolygonShape3D_n3j6u")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="MeshInstance3D2/Hitbox" to="." method="_on_hitbox_area_entered"]
